changed some import informations and made corrections accordingly

--- a/src/PTA_sample_figure_generator.ipynb
+++ b/src/PTA_sample_figure_generator.ipynb
@@ -1446,8 +1446,13 @@
     }
    ],
    "source": [
+    "import os\n",
     "import pandas as pd\n",
-    "import other_functions as of\n",
+    "\n",
+    "import graph_generator as graph\n",
+    "import graph_functions as gf\n",
+    "import graph_PTA as pta\n",
+    "import common_functions as common\n",
     "\n",
     "url_share = \"https://docs.google.com/spreadsheets/d/1UQsU6FNr7ovVjLRIMIt\"\\\n",
     "            \"gtYWr1zN7UHpMjfHtdGa1myc/edit#gid=0\"\n",
@@ -1469,19 +1474,102 @@
     "                        \"LE_18000\", \"LE_20000\"]]\n",
     "\n",
     "# Elimination of the rows where there are no PTA tests\n",
-    "data_pta = of.eliminate_row(data_pta,\n",
+    "data_pta = gf.eliminate_row(data_pta,\n",
     "                            \"Protocol condition\",\n",
     "                            \"Condition 3A (OAEs right before the scan)\")\n",
     "\n",
     "# PTA, All results for one participant in one graph\n",
-    "one_subject = of.extract_subject(data_pta, \"Sub01\")\n",
-    "action_k = of.plot_pta_subject(one_subject, True)"
+    "one_subject = gf.extract_subject(data_pta, \"Sub01\")\n",
+    "action_k = pta.plot_pta_subject(one_subject, True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2e64f374",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Obtaining file:///home/tobby/Documents/NeuroMod/AuditoryData_pipeline\n",
+      "Installing collected packages: AuditoryDataPipeline\n",
+      "  Attempting uninstall: AuditoryDataPipeline\n",
+      "    Found existing installation: AuditoryDataPipeline 0.0.0\n",
+      "    Uninstalling AuditoryDataPipeline-0.0.0:\n",
+      "      Successfully uninstalled AuditoryDataPipeline-0.0.0\n",
+      "  Running setup.py develop for AuditoryDataPipeline\n",
+      "Successfully installed AuditoryDataPipeline\n",
+      "Package              Version Location                                            \n",
+      "-------------------- ------- ----------------------------------------------------\n",
+      "asttokens            2.0.5   \n",
+      "AuditoryDataPipeline 0.0.0   /home/tobby/Documents/NeuroMod/AuditoryData_pipeline\n",
+      "backcall             0.2.0   \n",
+      "debugpy              1.5.1   \n",
+      "decorator            5.1.1   \n",
+      "entrypoints          0.4     \n",
+      "et-xmlfile           1.1.0   \n",
+      "executing            0.8.3   \n",
+      "ipykernel            6.9.2   \n",
+      "ipython              8.1.1   \n",
+      "jedi                 0.18.1  \n",
+      "jupyter-client       7.1.2   \n",
+      "jupyter-core         4.9.2   \n",
+      "matplotlib-inline    0.1.3   \n",
+      "nest-asyncio         1.5.4   \n",
+      "numpy                1.22.2  \n",
+      "openpyxl             3.0.9   \n",
+      "pandas               1.4.1   \n",
+      "parso                0.8.3   \n",
+      "pexpect              4.8.0   \n",
+      "pickleshare          0.7.5   \n",
+      "pip                  20.0.2  \n",
+      "pkg-resources        0.0.0   \n",
+      "plotly               5.6.0   \n",
+      "prompt-toolkit       3.0.28  \n",
+      "psutil               5.9.0   \n",
+      "ptyprocess           0.7.0   \n",
+      "pure-eval            0.2.2   \n",
+      "Pygments             2.11.2  \n",
+      "python-dateutil      2.8.2   \n",
+      "pytz                 2021.3  \n",
+      "pyzmq                22.3.0  \n",
+      "setuptools           44.0.0  \n",
+      "six                  1.16.0  \n",
+      "stack-data           0.2.0   \n",
+      "tenacity             8.0.1   \n",
+      "tornado              6.1     \n",
+      "traitlets            5.1.1   \n",
+      "wcwidth              0.2.5   \n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'src'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_7380/3853766931.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'pip list'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mgraph_generator\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mgraph\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'src'"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install -e ./../\n",
+    "!pip list\n",
+    "\n",
+    "import src\n",
+    "import graph_generator as graph\n",
+    "\n",
+    "graph.master_run(\"..\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e64f374",
+   "id": "bcc9e655",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1489,7 +1577,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1503,7 +1591,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
